--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,13 @@
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
-        <h1>Productos</h1>
-        <p>Descripcion</p>
+        <div id="container">
+            <div id="post">
+               <h1>Productos</h1>
+              <p>Descripcion: Esta es la pagina donde se 
+                  excibiran los productos de mi negocio
+              </p>
+            </div> 
+        </div>
     </body>
 </html>
