agregando mas parrafo

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
               <p>Descripcion: Esta es la pagina donde se 
                   excibiran los productos de mi negocio
               </p>
+              <p>La idea es tener mas ingresos conn este medio</p>
             </div> 
         </div>
     </body>
