--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Inject_Carb</title>
+        <title>Inject__Carb</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
