Cabecera footer terminado

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,9 @@
               </p>
               <p>La idea es tener mas ingresos conn este medio</p>
             </div> 
+            <div id="footer">
+                Hecho en colombia
+            </div>
         </div>
     </body>
 </html>
